assets/css/default.css
---
layout: null
---
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    @apply text-base font-mono h-full;

    /* monospace + ligatures = 😑 */
    font-feature-settings: 'liga' 0;
  }

  body {
    @apply min-h-full bg-light text-dark dark:bg-dark dark:text-light;
  }

  main {
    @apply min-h-full;
  }

  .prose {
    @apply text-dark dark:text-light;
  }

  .prose a {
    @apply underline;
  }

  h1, h2, h3, h4, h5, h6 {
    @apply font-heading text-dark dark:text-light;
  }

  .prose h1 {
    @apply text-5xl mb-0;
  }

  .prose h2 {
    @apply text-3xl;
  }

  .prose h3 {
    @apply text-xl;
  }

  .golden {
    @apply min-h-screen max-w-[930px];
    padding: 30px 90px 90px 90px;
    margin: 0 -60px;
  }

  @media screen(md) {
    .golden {
      padding: 30px 120px 90px 90px;
      margin: 0 -30px;
    }
  }

  @media screen(lg) {
    .golden {
      margin: 0 auto;
    }
  }

  @media screen(xl) {
    .golden {
      margin: 0 0 0 calc(61.8% - 720px);
    }
  }

  .bg-grid {
    background: linear-gradient(90deg, theme(colors.dark / 5%) 1%, transparent 1%) 0 0, theme(colors.light);
    background-size: 90px 90px;
  }

  .dark .bg-grid {
    background: linear-gradient(90deg, theme(colors.light / 8%) 1%, transparent 1%) 0 0, theme(colors.dark);
    background-size: 90px 90px;
  }

  code {
    padding: 2px 4px;
    @apply whitespace-nowrap bg-dark-20 dark:bg-dark-80 dark:text-light rounded-sm;
  }

  pre > code {
    @apply p-0 whitespace-pre-wrap !bg-transparent;
  }

  pre {
    @apply -mx-30 sm:-mx-[20px] px-[20px] mb-15 py-15 bg-dark-80/50 text-light rounded-sm overflow-x-auto;
  }

  .ascii-diagram {
    line-height: 1;
    font-family: monospace;
    overflow-x: auto;
  }

  .text-muted {
    @apply text-dark/70 dark:text-light/70;
  }
}

